# oo.config

./: README.md  pyproject.toml  setup.py
oo/config/: __init__.py  oo_config.py
oo/config/test/: test_oo_config.py
